# faslib

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  COPYING  ChangeLog  Doxyfile  Doxyfile.en  MIT-LICENSE.txt  Makefile  NEWS  README  README.md  Readme.md  TODO  doxygen.css  fasg++  fasg++-3.3  faslib-0.2.0.kdev4  faslib-0.2.tar.sh  index.html  kdevelop3_gen.sh  menudata.js  mingw_gen.cmd  msvs10_gen.cmd  msvs9_gen.cmd  nmake_gen.cmd  remove_make~.sh  timeout-m
.ci/: automr.sh  (+6 more)
examples/aop/: CMakeLists.txt  aop_duck.cpp  aop_duck2.cpp  aop_error.cpp  foo.cpp  oop_duck.cpp
probe/chain01/: CMakeLists.txt  ad_chain.hpp  chain.hpp  chain1.cpp  chain2.cpp  chain3.cpp  chain_b.hpp  chain_c.hpp
test/: CMakeLists.txt
test/adv/: adv_test.cpp  test_managers.cpp
test/algorithm/: CMakeLists.txt  count.cpp  do_while.cpp  find_if.cpp  for_.cpp  generate.cpp  index_of_if.cpp  is_sorted.cpp  select.cpp  sort.cpp  transform2.cpp  transform_tail.cpp  unique_first_if.cpp
test/aop/: CMakeLists.txt  advice_select.cpp  aspect_class.cpp  aspect_group.cpp  aspect_hierarchy.cpp  find_advice.cpp  performance_compile.hpp  performance_compile1.cpp
test/generators/: generator.cpp
test/hierarchy/: CMakeLists.txt  scatter_hierarchy.cpp
test/integral/: CMakeLists.txt  arithmetic.cpp  comparisons.cpp  integral.cpp  logical_op.cpp
test/jsonrpc/: CMakeLists.txt  common_test.cpp  handler_test.cpp  inbound_test.cpp  invoke_test.cpp  local_test.cpp  method_test.cpp  outgoing_error_test.cpp  outgoing_test.cpp  test_jsonrpc.cpp
test/mp/: CMakeLists.txt  apply.cpp  apply2.cpp  bind.cpp  lambda.cpp  simplify.cpp
test/range/: CMakeLists.txt  array_range_suite.cpp  basic2_suite.cpp  basic_suite.cpp  basic_suite.hpp  container_range_suite.cpp  iterator_range_suite.cpp  other_range_suite.cpp  test_range.cpp
test/range/benchmark/: CMakeLists.txt  sort.cpp  strlen.cpp
test/ranges/: CMakeLists.txt  array_range_test.cpp  basic_test.cpp  range_test.cpp  test_ranges.cpp
test/rpc/: CMakeLists.txt
test/serialization/: CMakeLists.txt  bar.hpp  bool2string_test.cpp  integer2string_test.cpp  test_ser.cpp
test/static_check/: CMakeLists.txt  static_check.cpp  test_static_error.cpp  verifying.cpp
test/testing/: CMakeLists.txt  statements.cpp  suite.cpp  suite_map.cpp  suite_run.cpp  unit.cpp
test/type_list/: CMakeLists.txt  check_list.cpp  check_organized.cpp  erase.cpp  index_of.cpp  length.cpp  merge.cpp  organize.cpp  push_back.cpp  push_front.cpp  reverse.cpp  split.cpp  test_erase.cpp  test_push_back.cpp  test_push_front.cpp  test_type_list.cpp  type_at.cpp  type_count.cpp  type_list.cpp  unique.cpp
test/typemanip/: CMakeLists.txt  conversion.cpp  switch_case.cpp  test_conversion.cpp  test_switch.cpp  tstring.cpp  typemanip.cpp
test/xtime/: CMakeLists.txt  nanotime.cpp  xspan.cpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  generate.cpp  random_shuffle.cpp  shuffle.cpp  sort.cpp  test_accumulate.cpp  test_count.cpp  test_find_if.cpp  test_for_.cpp  test_generate.cpp  test_generator.cpp  test_index_of_if.cpp  test_is_sorted.cpp  test_random_shuffle.cpp  test_select.cpp  test_shuffle.cpp  test_sort.cpp  test_transform.cpp  test_transform2.cpp  test_transform_tail.cpp  test_unique_first_if.cpp  test_unique_if.cpp  transform.cpp  unique_if.cpp
tests/aop/: CMakeLists.txt  aspect_class.cpp  aspect_hierarchy.cpp  performance_compile3.cpp  test_aop1.cpp  test_aop10.cpp  test_aop2.cpp  test_aop3.cpp  test_aop4.cpp  test_aop5.cpp  test_aop6.cpp  test_aop7.cpp  test_aop8.cpp  test_aop9.cpp  test_aspect_class.cpp  test_aspect_group.cpp  test_aspect_hierarchy.cpp
tests/functional/: CMakeLists.txt  test_functional.cpp
tests/generators/: CMakeLists.txt
tests/hierarchy/: CMakeLists.txt  scatter_hierarchy.cpp  test_hierarchy.cpp
tests/integral/: CMakeLists.txt  test_arithmetic.cpp  test_comparisons.cpp  test_integral.cpp  test_logical_op.cpp
tests/mp/: CMakeLists.txt  apply2.cpp  bind.cpp  ph_max.cpp  ps.cpp  test_apply.cpp  test_apply2.cpp  test_bind.cpp  test_lambda.cpp  test_ph_max.cpp  test_ps.cpp  test_simplify.cpp
tests/range/: CMakeLists.txt  array_range_suite.cpp  basic2_suite.cpp  basic_suite.cpp  basic_suite.hpp  container_range_suite.cpp  iterator_range_suite.cpp  other_range_suite.cpp  pointer_range_suite.cpp  range_suite.cpp  stream_range_suite.cpp  test_range.cpp
tests/static_check/: CMakeLists.txt  test_static_check.cpp  test_static_error.cpp
tests/testing/: CMakeLists.txt  test_statements.cpp  test_suite.cpp  test_suite_map.cpp  test_suite_run.cpp  test_test.cpp  test_unit.cpp
tests/type_list/: CMakeLists.txt  test_check_organized.cpp  test_erase.cpp  test_index_of.cpp  test_length.cpp  test_merge.cpp  test_organize.cpp  test_push_back.cpp  test_push_front.cpp  test_reverse.cpp  test_split.cpp  test_type_at.cpp  test_type_count.cpp  test_type_list.cpp  test_unique.cpp  test_unique_first.cpp
tests/typemanip/: CMakeLists.txt  test_access.cpp  test_conversion.cpp  test_switch.cpp  test_tstring.cpp  test_typemanip.cpp
tests/utility/: CMakeLists.txt  test_utility.cpp
tests/xtime/: CMakeLists.txt  test_nanotime.cpp  test_xspan.cpp
tutorial/: CMakeLists.txt  out_type_list.hpp
tutorial/algorithm/: CMakeLists.txt  algorithm1.cpp  algorithm2.cpp  algorithm3.cpp  algorithm4.cpp  algorithm5.cpp  algorithm6.cpp
tutorial/aop/: CMakeLists.txt  aop0.cpp  aop1.cpp  aop10.cpp  aop11.cpp  aop12.cpp  aop13.cpp  aop14.cpp  aop15.cpp  aop16.cpp  aop2.cpp  aop3.cpp  aop4.cpp  aop6.py  aop7.cpp  aop8.cpp  aop9.py
tutorial/chain/: CMakeLists.txt  ad_chain.hpp  chain.hpp  chain2.cpp  chain3.cpp  chain4.cpp  chain4bm_v.cpp  chain_a.hpp  chain_b.hpp
tutorial/helloworld/: CMakeLists.txt  helloworld.hpp  helloworld.py  helloworld0.cpp  helloworld1.cpp  helloworld2.cpp  helloworld2_aspect.hpp  helloworld3.cpp  helloworld3_aspect.hpp  helloworld4.cpp
tutorial/json/: json1.cpp  json2.cpp  json3.cpp
tutorial/type_list/: CMakeLists.txt  type_list1.cpp  type_list2.cpp  type_list3.cpp  type_list4.cpp  type_list5.cpp  type_list6.cpp
(+2297 files in other folders)
