project(tests)

set(FAS_TESTING_CPP "${CMAKE_SOURCE_DIR}/fas/testing/testing.cpp")

if(UNIX)
  SET(CMAKE_CXX_FLAGS "-W -Wall -Werror -pedantic -fno-rtti -Wno-long-long")
  SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG ")
  SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO  "-O2 -g -DNDEBUG")
  SET(CMAKE_CXX_FLAGS_DEBUG  "-O0 -g")
elseif(MSVC)
  SET(CMAKE_CXX_FLAGS "/GR- /W3 /wd4503 /wd4307 /EHsc /D_CRT_SECURE_NO_WARNINGS /D_SCL_SECURE_NO_WARNINGS")
  SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG")
  SET(CMAKE_CXX_FLAGS_DEBUG  "/Od /D_DEBUG")
  SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO  "/Yd /O2 /DNDEBUG")
else(UNIX)

endif(UNIX)


add_subdirectory(static_check)
add_subdirectory(integral)
add_subdirectory(typemanip)
add_subdirectory(type_list)
add_subdirectory(mp)
add_subdirectory(algorithm)
add_subdirectory(hierarchy)
add_subdirectory(aop)
add_subdirectory(xtime)
add_subdirectory(testing)
add_subdirectory(range)
