cmake_minimum_required(VERSION 2.8)

add_subdirectory(static_check)
add_subdirectory(integral)
add_subdirectory(utility)
add_subdirectory(typemanip)
add_subdirectory(type_list)
add_subdirectory(mp)
add_subdirectory(algorithm)
add_subdirectory(hierarchy)
add_subdirectory(aop)
add_subdirectory(xtime)
add_subdirectory(testing)
add_subdirectory(range)
