cmake_minimum_required(VERSION 2.6)
project(chain-0.1)
ADD_DEFINITIONS(-DFASLIB_TYPE_LIST_CHECK)
#SET(CMAKE_CXX_FLAGS "-Wall -fno-rtti -O0 -g" )  
SET(CMAKE_CXX_FLAGS "-Wall -fno-rtti -O3" )  
add_executable(chain0 chain0.cpp)
add_executable(chain1 chain1.cpp)
add_executable(chain2 chain2.cpp)
add_executable(chain3 chain3.cpp)
add_executable(chain4 chain4.cpp)

include_directories(../../../faslib)
