add_executable(count count.cpp)
add_executable(index_of_if index_of_if.cpp)
add_executable(find_if find_if.cpp)
add_executable(is_sorted is_sorted.cpp)
add_executable(sort sort.cpp)
add_executable(transform transform.cpp)
add_executable(transform_tail transform_tail.cpp)
add_executable(transform2 transform2.cpp)
add_executable(generate generate.cpp)
add_executable(shuffle shuffle.cpp)
add_executable(random_shuffle random_shuffle.cpp)
add_executable(do_while do_while.cpp)
add_executable(unique_if unique_if.cpp)
add_executable(unique_first_if unique_first_if.cpp)
add_executable(select select.cpp)

add_test(algorithm count)
add_test(algorithm transform)
add_test(algorithm transform2)
add_test(algorithm transform_tail)
add_test(algorithm index_of_if)
add_test(algorithm find_if)
add_test(algorithm unique_if)
add_test(algorithm unique_first_if)
add_test(algorithm select)
add_test(algorithm generate)
add_test(algorithm do_while)
add_test(algorithm is_sorted)
add_test(algorithm sort)
add_test(algorithm shuffle)
add_test(algorithm random_shuffle)

