add_executable(ps ps.cpp)
add_executable(ph_max ph_max.cpp)
add_executable(bind bind.cpp)
add_executable(apply apply.cpp)
add_executable(apply2 apply2.cpp)
add_executable(lambda lambda.cpp)
add_executable(simplify simplify.cpp)

add_test(mp_ps        ps)
add_test(mp_ph_max    ph_max)
add_test(mp_bind      bind)
add_test(mp_apply     apply)
add_test(mp_apply2    apply2)
add_test(mp_lambda    lambda)
add_test(mp_simplify  simplify)

