add_executable(type_list type_list.cpp)
add_executable(check_list check_list.cpp)
add_executable(check_organized check_organized.cpp)
add_executable(length length.cpp)
add_executable(type_count type_count.cpp)
add_executable(type_at type_at.cpp)
add_executable(index_of index_of.cpp)
add_executable(merge merge.cpp)
add_executable(organize organize.cpp)
add_executable(split split.cpp)
add_executable(erase erase.cpp)
add_executable(reverse reverse.cpp)
add_executable(push_front push_front.cpp)
add_executable(push_back push_back.cpp)
add_executable(unique unique.cpp)

add_test(type_list type_list)
add_test(type_list check_list)
add_test(type_list check_organized)
add_test(type_list length)
add_test(type_list type_count)
add_test(type_list type_at)
add_test(type_list organize)
add_test(type_list merge)
add_test(type_list split)
add_test(type_list erase)
add_test(type_list unique)
add_test(type_list reverse)
add_test(type_list index_of)
add_test(type_list push_front)
add_test(type_list push_back)

