add_executable(type_list type_list.cpp)
add_executable(check_list check_list.cpp)
add_executable(check_organized check_organized.cpp)
add_executable(length length.cpp)
add_executable(type_count type_count.cpp)
add_executable(type_at type_at.cpp)
add_executable(index_of index_of.cpp)
add_executable(merge merge.cpp)
add_executable(organize organize.cpp)
add_executable(split split.cpp)
add_executable(erase erase.cpp)
add_executable(reverse reverse.cpp)
add_executable(push_front push_front.cpp)
add_executable(push_back push_back.cpp)
add_executable(unique unique.cpp)

add_test(type_list                  type_list)
add_test(type_list_check_list       check_list)
add_test(type_list_check_organized  check_organized)
add_test(type_list_length           length)
add_test(type_list_type_count       type_count)
add_test(type_list_type_at          type_at)
add_test(type_list_organize         organize)
add_test(type_list_merge            merge)
add_test(type_list_split            split)
add_test(type_list_erase            erase)
add_test(type_list_unique           unique)
add_test(type_list_reverse          reverse)
add_test(type_list_index_of         index_of)
add_test(type_list_push_front       push_front)
add_test(type_list_push_back        push_back)

