add_executable(test_accumulate      test_accumulate.cpp)
add_executable(test_count           test_count.cpp)
add_executable(test_index_of_if     test_index_of_if.cpp)
add_executable(test_find_if         test_find_if.cpp)
add_executable(test_is_sorted       test_is_sorted.cpp)
add_executable(test_sort            test_sort.cpp)
add_executable(test_transform       test_transform.cpp)
add_executable(test_transform_tail  test_transform_tail.cpp)
add_executable(test_transform2      test_transform2.cpp)
add_executable(test_generator       test_generator.cpp)
add_executable(test_generate        test_generate.cpp)
add_executable(test_shuffle         test_shuffle.cpp)
add_executable(test_random_shuffle  test_random_shuffle.cpp)
add_executable(test_for_            test_for_.cpp)
add_executable(test_unique_if       test_unique_if.cpp)
add_executable(test_unique_first_if test_unique_first_if.cpp)
add_executable(test_select          test_select.cpp)

add_test(algorithm_accumulate       test_accumulate)
add_test(algorithm_count            test_count)
add_test(algorithm_transform        test_transform)
add_test(algorithm_transform2       test_transform2)
add_test(algorithm_transform_tail   test_transform_tail)
add_test(algorithm_index_of_if      test_index_of_if)
add_test(algorithm_find_if          test_find_if)
add_test(algorithm_unique_if        test_unique_if)
add_test(algorithm_unique_first_if  test_unique_first_if)
add_test(algorithm_select           test_select)
add_test(algorithm_generator        test_generator)
add_test(algorithm_generate         test_generate)
add_test(algorithm_for_             test_for_)
add_test(algorithm_is_sorted        test_is_sorted)
add_test(algorithm_sort             test_sort)
add_test(algorithm_shuffle          test_shuffle)
add_test(algorithm_random_shuffle   test_random_shuffle)

