add_executable(test_aop1 test_aop1.cpp)
add_executable(test_aop2 test_aop2.cpp)
add_executable(test_aop3 test_aop3.cpp)
add_executable(test_aop4 test_aop4.cpp)
add_executable(test_aop5 test_aop5.cpp)
add_executable(test_aop6 test_aop6.cpp)
add_executable(test_aop7 test_aop7.cpp)
add_executable(test_aop8 test_aop8.cpp)
add_executable(test_aop9 test_aop9.cpp)

add_test(aop1 test_aop1)
add_test(aop2 test_aop2)
add_test(aop3 test_aop3)
add_test(aop4 test_aop4)
add_test(aop5 test_aop5)
add_test(aop6 test_aop6)
add_test(aop7 test_aop7)
add_test(aop8 test_aop8)
add_test(aop9 test_aop9)



