add_executable(test_aop1 test_aop1.cpp)
add_executable(test_aop2 test_aop2.cpp)
add_executable(test_aop3 test_aop3.cpp)
add_executable(test_aop4 test_aop4.cpp)
add_executable(test_aop5 test_aop5.cpp)
add_executable(test_aop6 test_aop6.cpp)
add_executable(test_aop7 test_aop7.cpp)
add_executable(test_aop8 test_aop8.cpp)
add_executable(test_aop9 test_aop9.cpp)
add_executable(test_aop10 test_aop10.cpp)

wci_test(NAME aop1  TARGET test_aop1)
wci_test(NAME aop2  TARGET test_aop2)
wci_test(NAME aop3  TARGET test_aop3)
wci_test(NAME aop4  TARGET test_aop4)
wci_test(NAME aop5  TARGET test_aop5)
wci_test(NAME aop6  TARGET test_aop6)
wci_test(NAME aop7  TARGET test_aop7)
wci_test(NAME aop8  TARGET test_aop8)
wci_test(NAME aop9  TARGET test_aop9)
wci_test(NAME aop10 TARGET test_aop10)



