add_executable(test_ps        test_ps.cpp)
add_executable(test_ph_max    test_ph_max.cpp)
add_executable(test_bind      test_bind.cpp)
add_executable(test_apply     test_apply.cpp)
add_executable(test_apply2    test_apply2.cpp)
add_executable(test_lambda    test_lambda.cpp)
add_executable(test_simplify  test_simplify.cpp)

wci_test(NAME mp_ps        COMMAND test_ps)
wci_test(NAME mp_ph_max    COMMAND test_ph_max)
wci_test(NAME mp_bind      COMMAND test_bind)
wci_test(NAME mp_apply     COMMAND test_apply)
wci_test(NAME mp_apply2    COMMAND test_apply2)
wci_test(NAME mp_lambda    COMMAND test_lambda)
wci_test(NAME mp_simplify  COMMAND test_simplify)

