add_executable(test_ps        test_ps.cpp)
add_executable(test_ph_max    test_ph_max.cpp)
add_executable(test_bind      test_bind.cpp)
add_executable(test_apply     test_apply.cpp)
add_executable(test_apply2    test_apply2.cpp)
add_executable(test_lambda    test_lambda.cpp)
add_executable(test_simplify  test_simplify.cpp)

wci_test(NAME mp_ps        TARGET test_ps)
wci_test(NAME mp_ph_max    TARGET test_ph_max)
wci_test(NAME mp_bind      TARGET test_bind)
wci_test(NAME mp_apply     TARGET test_apply)
wci_test(NAME mp_apply2    TARGET test_apply2)
wci_test(NAME mp_lambda    TARGET test_lambda)
wci_test(NAME mp_simplify  TARGET test_simplify)

