add_executable(test_unit       test_unit.cpp)
add_executable(test_statements test_statements.cpp)
add_executable(test_suite      test_suite.cpp)
add_executable(test_suite_run  test_suite_run.cpp)
add_executable(test_suite_map  test_suite_map.cpp)
add_executable(test_test  test_test.cpp $ENV{FAS_TESTING_CPP})

wci_test(NAME testing_unit       COMMAND test_unit)
wci_test(NAME testing_statements COMMAND test_statements)
wci_test(NAME testing_suite      COMMAND test_suite)
wci_test(NAME testing_suite_run  COMMAND test_suite_run)
wci_test(NAME testing_suite_map  COMMAND test_suite_map)
wci_test(NAME test_test          COMMAND test_test)
