add_executable(test_unit       test_unit.cpp)
add_executable(test_statements test_statements.cpp)
add_executable(test_suite      test_suite.cpp)
add_executable(test_suite_run  test_suite_run.cpp)
add_executable(test_suite_map  test_suite_map.cpp)
add_executable(test_test  test_test.cpp)
target_link_libraries(test_test PRIVATE fas::testing)

wci_test(NAME testing_unit       TARGET test_unit)
wci_test(NAME testing_statements TARGET test_statements)
wci_test(NAME testing_suite      TARGET test_suite)
wci_test(NAME testing_suite_run  TARGET test_suite_run)
wci_test(NAME testing_suite_map  TARGET test_suite_map)
wci_test(NAME test_test          TARGET test_test)
