add_executable(test_type_list       test_type_list.cpp)
add_executable(test_check_organized test_check_organized.cpp)
add_executable(test_length          test_length.cpp)
add_executable(test_type_count      test_type_count.cpp)
add_executable(test_type_at         test_type_at.cpp)
add_executable(test_index_of        test_index_of.cpp)
add_executable(test_merge           test_merge.cpp)
add_executable(test_organize        test_organize.cpp)
add_executable(test_split           test_split.cpp)
add_executable(test_erase           test_erase.cpp)
add_executable(test_reverse         test_reverse.cpp)
add_executable(test_push_front      test_push_front.cpp)
add_executable(test_push_back       test_push_back.cpp)
add_executable(test_unique          test_unique.cpp)
add_executable(test_unique_first    test_unique_first.cpp)

add_test(type_list                  test_type_list)
add_test(type_list_check_organized  test_check_organized)
add_test(type_list_length           test_length)
add_test(type_list_type_count       test_type_count)
add_test(type_list_type_at          test_type_at)
add_test(type_list_organize         test_organize)
add_test(type_list_merge            test_merge)
add_test(type_list_split            test_split)
add_test(type_list_erase            test_erase)
add_test(type_list_unique           test_unique)
add_test(type_list_unique_first     test_unique_first)
add_test(type_list_reverse          test_reverse)
add_test(type_list_index_of         test_index_of)
add_test(type_list_push_front       test_push_front)
add_test(type_list_push_back        test_push_back)

